Added the first draft of the public documentation for Xamarin Scanbot SDK.

--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -9,9 +9,9 @@
   <title>Scanbot SDK for Xamarin</title>
   <meta name="description" content="">
 
-  <link rel="stylesheet" href="/assets/main.css">
-  <link rel="canonical" href="/">
-  <link rel="alternate" type="application/rss+xml" title="Scanbot SDK for Xamarin" href="/feed.xml">
+  <link rel="stylesheet" href="/documentation/xamarin/assets/main.css">
+  <link rel="canonical" href="https://scanbotsdk.github.io/documentation/xamarin/">
+  <link rel="alternate" type="application/rss+xml" title="Scanbot SDK for Xamarin" href="/documentation/xamarin/feed.xml">
   
   
 </head>
@@ -23,7 +23,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="/">Scanbot SDK for Xamarin</a>
+    <a class="site-title" href="/documentation/xamarin/">Scanbot SDK for Xamarin</a>
 
     <nav class="site-nav">
       <span class="menu-icon">
