Added final NuGet links for ScanbotSDK.Xamarin.Android and ScanbotSDK.Xamarin.iOS

--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -77,8 +77,8 @@ For more details visit our website <a href="https://scanbot.io/sdk.html">https:/
 <p>The Scanbot SDK is provided as NuGet packages for Xamarin Platform</p>
 
 <ul>
-  <li><a href="http://TODO_release_packages">ScanbotSDK.Xamarin.Android - TODO</a></li>
-  <li><a href="http://TODO_release_packages">ScanbotSDK.Xamarin.iOS - TODO</a></li>
+  <li><a href="https://www.nuget.org/packages/ScanbotSDK.Xamarin.Android">ScanbotSDK.Xamarin.Android</a></li>
+  <li><a href="https://www.nuget.org/packages/ScanbotSDK.Xamarin.iOS">ScanbotSDK.Xamarin.iOS</a></li>
 </ul>
 
 <p>You can directly install them in Xamarin Studio IDE.
