added release notes for v1.1.0

--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -655,9 +655,21 @@ public class MyCameraActivity : AppCompatActivity, IPictureCallback, ContourDete
 
 <h3 id="release-history">Release history</h3>
 
-<h5 id="100">1.0.0</h5>
+<h5 id="scanbotsdkxamarinios-110">ScanbotSDK.Xamarin.iOS 1.1.0</h5>
 <ul>
-  <li>First release version</li>
+  <li>Upgraded the Native Scanbot iOS SDK to v1.4.0</li>
+  <li>Added bindings for Cropping UI (see SBSDKCropViewController)</li>
+</ul>
+
+<h5 id="scanbotsdkxamarinandroid-110">ScanbotSDK.Xamarin.Android 1.1.0</h5>
+<ul>
+  <li>Removed DLLs (Xamarin.Android.Support.v4.dll and Xamarin.Android.Support.v7.AppCompat.dll) from the NuGet package</li>
+  <li>Minor fixes</li>
+</ul>
+
+<h5 id="scanbotsdkxamarinios-100--scanbotsdkxamarinandroid-100">ScanbotSDK.Xamarin.iOS 1.0.0 &amp; ScanbotSDK.Xamarin.Android 1.0.0</h5>
+<ul>
+  <li>First release versions</li>
 </ul>
 
 <h3 id="libraries-and-licenses">Libraries and Licenses</h3>
