Added links to example apps (cordova plain + ionic1)

--- a/cordova/index.html
+++ b/cordova/index.html
@@ -89,6 +89,15 @@ For more details visit our website <a href="https://scanbot.io/sdk.html">https:/
   <li>iOS 8 and higher</li>
 </ul>
 
+<h3 id="example-apps">Example Apps</h3>
+
+<p>Check out our example apps on GitHub:</p>
+
+<ul>
+  <li>Plain Cordova App: <a href="https://github.com/doo/scanbot-sdk-example-cordova">https://github.com/doo/scanbot-sdk-example-cordova</a></li>
+  <li>Ionic 1 App: <a href="https://github.com/doo/scanbot-sdk-example-ionic1">https://github.com/doo/scanbot-sdk-example-ionic1</a></li>
+</ul>
+
 <h3 id="installation">Installation</h3>
 
 <p>The Scanbot SDK plugin is available as <a href="https://www.npmjs.com/package/cordova-plugin-scanbot-sdk">npm package</a>.</p>
@@ -229,7 +238,9 @@ Call the initialization after the ‘deviceready’ event has been fired.</p>
 <h4 id="license-key">License Key</h4>
 <p>You can test all Scanbot SDK plugin features and develop your apps without a license.
 However, if you do not specify the license key when initializing the SDK, it will work in <strong>trial mode (trial period of 1 minute)</strong>.
-If this is not enough for you, contact us at <a href="mailto:sdk@scanbot.io">sdk@scanbot.io</a> and we’ll give you a free no strings attached 
+To get another trial period you have to restart your app.</p>
+
+<p>If this is not enough for you, contact us at <a href="mailto:sdk@scanbot.io">sdk@scanbot.io</a> and we’ll give you a free no strings attached 
 trial license for a longer period. In order to run the Scanbot SDK plugin functionality within your production app you have 
 to purchase and use a valid Scanbot SDK license.</p>
 
