Added release notes for ScanbotSDK.Xamarin.Android v1.1.1

--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
 
   <link rel="stylesheet" href="/documentation/xamarin/assets/main.css">
-  <link rel="canonical" href="http://localhost:4000/documentation/xamarin/">
+  <link rel="canonical" href="https://scanbotsdk.github.io/documentation/xamarin/">
   <link rel="alternate" type="application/rss+xml" title="Scanbot SDK for Xamarin" href="/documentation/xamarin/feed.xml">
   
   
@@ -203,7 +203,9 @@ In the following examples we will use the convenient wrapper class <code class="
 <h4 id="license">License</h4>
 <p>You can test all Scanbot SDK features and develop your app without a license.
 However, if you do not specify the license key when initializing the SDK, it will work in <strong>trial mode (trial period of 1 minute)</strong>.
-If this is not enough for you, contact us at <a href="mailto:sdk@scanbot.io">sdk@scanbot.io</a> and we’ll give you a free no strings attached trial license for a longer period. In order to run the Scanbot SDK functionality within your production app you have to purchase and use a valid Scanbot SDK license.</p>
+To get another trial period you have to restart your app.</p>
+
+<p>If this is not enough for you, contact us at <a href="mailto:sdk@scanbot.io">sdk@scanbot.io</a> and we’ll give you a free no strings attached trial license for a longer period. In order to run the Scanbot SDK functionality within your production app you have to purchase and use a valid Scanbot SDK license.</p>
 
 <p>Each license key is valid only to your apps bundle identifier. The license also defines which modules you are allowed to use. The usage of unlicensed modules will log an error to the console and terminate the app. If your license has expired any calls of the Scanbot SDK API will terminate your app.</p>
 
@@ -882,6 +884,11 @@ To further improve the user experience you might want to automatically take a ph
 </ul>
 
 <h3 id="release-history">Release history</h3>
+
+<h5 id="scanbotsdkxamarinandroid-111">ScanbotSDK.Xamarin.Android 1.1.1</h5>
+<ul>
+  <li>Upgraded the Native Scanbot Android SDK to v1.22.0</li>
+</ul>
 
 <h5 id="scanbotsdkxamarinios-110">ScanbotSDK.Xamarin.iOS 1.1.0</h5>
 <ul>
