--- a/cordova/index.html
+++ b/cordova/index.html
@@ -636,6 +636,15 @@ Please see the description of the UI functions <a href="#module_ScanbotSdkUi.sta
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history">Release history</h3>
 
+<h5 id="111">1.1.1</h5>
+<ul>
+  <li>Android:
+    <ul>
+      <li>Bugfix: Autorotating images based on image orientation value in Camera UI (relevant for most Samsung devices).</li>
+    </ul>
+  </li>
+</ul>
+
 <h5 id="110">1.1.0</h5>
 <ul>
   <li>Android:
