--- a/cordova/index.html
+++ b/cordova/index.html
@@ -806,6 +806,23 @@ Please see the description of the UI functions <a href="#module_ScanbotSdkUi.sta
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history">Release history</h3>
 
+<h5 id="121">1.2.1</h5>
+<ul>
+  <li>Android:
+    <ul>
+      <li>Bugfix: Fixed a crash in Camera UI when resuming the App (fix in the native Scanbot Android SDK)</li>
+      <li>Bugfix: Fixed an issue with the flash light in Camera UI on some devices (fix in the native Scanbot Android SDK)</li>
+      <li>Under the hood: Upgraded the native Scanbot Android SDK to v1.22.6</li>
+    </ul>
+  </li>
+  <li>iOS:
+    <ul>
+      <li>Bugfix: Fixed a bug in Cropping UI where sometimes the polygon handles were not visible (fix in the native Scanbot iOS SDK)</li>
+      <li>Under the hood: Upgraded the native Scanbot iOS SDK to v1.4.3</li>
+    </ul>
+  </li>
+</ul>
+
 <h5 id="120">1.2.0</h5>
 <ul>
   <li>Android &amp; iOS
