Add link to the xamarin example app

--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -65,11 +65,17 @@ It contains modules which are individually licensable as license packages.
 For more details visit our website <a href="https://scanbot.io/sdk.html">https://scanbot.io/sdk.html</a></p>
 
 <h3 id="requirements">Requirements</h3>
-<p>The Scanbot SDK supports the following mobile platforms</p>
+<p>The Scanbot SDK for Xamarin supports the following mobile platforms</p>
 <ul>
   <li>iOS 8 and higher</li>
   <li>Android 4.1 (API Level 16) and higher</li>
 </ul>
+
+<h3 id="example-app">Example App</h3>
+
+<p>Check out our example app for Android and iOS on GitHub:</p>
+
+<p><a href="https://github.com/doo/scanbot-sdk-example-xamarin">https://github.com/doo/scanbot-sdk-example-xamarin</a></p>
 
 <h3 id="getting-started">Getting started</h3>
 
