Update Xamarin docs: Release notes for ScanbotSDK.Xamarin.Android v1.2.0

--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -965,19 +965,25 @@ Which means a renewal or extension of a license will cause a new license key str
 
 <h3 id="release-history">Release history</h3>
 
+<h5 id="scanbotsdkxamarinandroid-120">ScanbotSDK.Xamarin.Android 1.2.0</h5>
+<ul>
+  <li>Upgraded the native Scanbot Android SDK to v1.23.2</li>
+  <li>Upgraded dependency “Xamarin.Android.Support.v7.AppCompat” to v25.3.1</li>
+</ul>
+
 <h5 id="scanbotsdkxamarinandroid-112">ScanbotSDK.Xamarin.Android 1.1.2</h5>
 <ul>
-  <li>Upgraded the Native Scanbot Android SDK to v1.22.3, which provides continuous focus mode in ScanbotCameraView</li>
+  <li>Upgraded the native Scanbot Android SDK to v1.22.3, which provides continuous focus mode in ScanbotCameraView</li>
 </ul>
 
 <h5 id="scanbotsdkxamarinandroid-111">ScanbotSDK.Xamarin.Android 1.1.1</h5>
 <ul>
-  <li>Upgraded the Native Scanbot Android SDK to v1.22.0</li>
+  <li>Upgraded the native Scanbot Android SDK to v1.22.0</li>
 </ul>
 
 <h5 id="scanbotsdkxamarinios-110">ScanbotSDK.Xamarin.iOS 1.1.0</h5>
 <ul>
-  <li>Upgraded the Native Scanbot iOS SDK to v1.4.0</li>
+  <li>Upgraded the native Scanbot iOS SDK to v1.4.0</li>
   <li>Added bindings for Cropping UI (see SBSDKCropViewController)</li>
 </ul>
 
