Update Cordova plugin docs

--- a/cordova/index.html
+++ b/cordova/index.html
@@ -806,6 +806,43 @@ Please see the description of the UI functions <a href="#module_ScanbotSdkUi.sta
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history">Release history</h3>
 
+<h5 id="125">1.2.5</h5>
+<ul>
+  <li>Android:
+    <ul>
+      <li>Improvement: Optimized Camera UI behaviour</li>
+    </ul>
+  </li>
+</ul>
+
+<h5 id="124">1.2.4</h5>
+<ul>
+  <li>Android:
+    <ul>
+      <li>Bugfix: User guidance messages are closed after leaving Camera screen</li>
+    </ul>
+  </li>
+</ul>
+
+<h5 id="123">1.2.3</h5>
+<ul>
+  <li>iOS:
+    <ul>
+      <li>Bugfix: Fixed Camera UI dismiss behaviour</li>
+    </ul>
+  </li>
+</ul>
+
+<h5 id="122">1.2.2</h5>
+<ul>
+  <li>Android:
+    <ul>
+      <li>Improvement: Added android:largeHeap=”true” application attribute in AndroidManifest.xml by default</li>
+      <li>Under the hood: Upgraded the native Scanbot Android SDK to v1.23.3</li>
+    </ul>
+  </li>
+</ul>
+
 <h5 id="121">1.2.1</h5>
 <ul>
   <li>Android:
