Update Xamarin docs: Add release notes for ScanbotSDK.Xamarin.iOS 1.1.1

--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -965,6 +965,12 @@ Which means a renewal or extension of a license will cause a new license key str
 
 <h3 id="release-history">Release history</h3>
 
+<h5 id="scanbotsdkxamarinios-111">ScanbotSDK.Xamarin.iOS 1.1.1</h5>
+<ul>
+  <li>Upgraded the native Scanbot iOS SDK to v1.4.6</li>
+  <li>SDK size optimizations</li>
+</ul>
+
 <h5 id="scanbotsdkxamarinandroid-121">ScanbotSDK.Xamarin.Android 1.2.1</h5>
 <ul>
   <li>Upgraded the native Scanbot Android SDK to v1.23.3</li>
