Update iOS docs: Add section Trial Licenses

--- a/ios/html/index.html
+++ b/ios/html/index.html
@@ -123,7 +123,17 @@ $(function() {
 <p>To renew an expired license or extend a valid license with new Scanbot SDK features, you will have to update your app in the App Store. The expiration date and the feature list of a license are an encrypted data part of the license key string. Which means a renewal or extension of a license will cause a new license key string to be generated.</p>
 <p><br />
 <br />
- </p><h3>4. Logging</h3>
+
+<h3>3.3 Trial Licenses</h3>
+<p>You can get a free no strings attached trial license.</p>
+<p>Please kindly note that this license can only be used in a <strong>development and staging environment</strong>.</p>
+<p>You are <strong>not allowed to publish</strong> your app to the App Store with a <strong>trial license</strong>.</p>
+<p>
+<br />
+<br />
+</p>
+
+<h3>4. Logging</h3>
 <p>Scanbot SDK comes with its own console logging. By default the logging is turned on. You can turn off logging of Scanbot SDK: </p><div class="fragment"><div class="line">[<a class="code" href="interface_scanbot_s_d_k.html">ScanbotSDK</a> <a class="code" href="interface_scanbot_s_d_k.html#ab87a41d64e7eb39566e60284cc810a1c">setLoggingEnabled</a>:NO];</div></div><!-- fragment --><p>This will also silence information about the Scanbot SDK license.</p>
 <p><br />
 <br />
