Update Xamarin docs: Add section Trial Licenses

--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -251,6 +251,11 @@ To get another trial period you have to restart your app.</p>
 </code></pre>
 </div>
 
+<h4 id="trial-licenses">Trial Licenses</h4>
+<p>You can get a free no strings attached trial license.
+Please kindly note that this license can only be used in a <strong>development and staging environment</strong>.
+You are <strong>not allowed to publish</strong> your app to the App Store, Play Store or any 3rd party Android App Store with a <strong>trial license</strong>.</p>
+
 <h4 id="logging">Logging</h4>
 <p>When initializing the Scanbot SDK you can enable or disable logging of the SDK.</p>
 
@@ -964,6 +969,11 @@ The expiration date and the feature list of a license are an encrypted data part
 Which means a renewal or extension of a license will cause a new license key string to be generated.</p>
 
 <h3 id="release-history">Release history</h3>
+
+<h5 id="scanbotsdkxamarinandroid-122">ScanbotSDK.Xamarin.Android 1.2.2</h5>
+<ul>
+  <li>Upgraded the native Scanbot Android SDK to v1.25.1</li>
+</ul>
 
 <h5 id="scanbotsdkxamarinios-111">ScanbotSDK.Xamarin.iOS 1.1.1</h5>
 <ul>
