Update Xamarin docs: Add release notes for ScanbotSDK.Xamarin.iOS 1.1.2

--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -970,6 +970,11 @@ Which means a renewal or extension of a license will cause a new license key str
 
 <h3 id="release-history">Release history</h3>
 
+<h5 id="scanbotsdkxamarinios-112">ScanbotSDK.Xamarin.iOS 1.1.2</h5>
+<ul>
+  <li>Upgraded the native Scanbot iOS SDK to v1.4.7</li>
+</ul>
+
 <h5 id="scanbotsdkxamarinandroid-122">ScanbotSDK.Xamarin.Android 1.2.2</h5>
 <ul>
   <li>Upgraded the native Scanbot Android SDK to v1.25.1</li>
