--- a/xamarin/index.html
+++ b/xamarin/index.html
@@ -970,6 +970,26 @@ Which means a renewal or extension of a license will cause a new license key str
 
 <h3 id="release-history">Release history</h3>
 
+<h5 id="scanbotsdkxamarinandroid-123">ScanbotSDK.Xamarin.Android 1.2.3</h5>
+<ul>
+  <li>Upgrade the native Scanbot Android SDK to v1.25.1</li>
+  <li>EditPolygonImageView now provides image rotation functionality</li>
+  <li>Add new Image Filter ImageFilter.ColorDocument to SBSDK Wrapper</li>
+  <li>Add RotateImage function to SBSDK Wrapper</li>
+  <li>Add IsLicenseValid function to SBSDK Wrapper</li>
+</ul>
+
+<h5 id="scanbotsdkxamarinios-113">ScanbotSDK.Xamarin.iOS 1.1.3</h5>
+<ul>
+  <li>Upgrade the native Scanbot iOS SDK to v1.4.8</li>
+  <li>Bindings for the new class SBSDKImageEditingViewController and its delegate interface
+(SBSDKImageEditingViewController as a flexible and more powerful replacement of SBSDKCropViewController)</li>
+  <li>SBSDKCropViewController has been deprecated and will not longer receive software engineering love</li>
+  <li>Add new Image Filter ImageFilter.ColorDocument to SBSDK Wrapper</li>
+  <li>Add RotateImage function to SBSDK Wrapper</li>
+  <li>Add IsLicenseValid function to SBSDK Wrapper</li>
+</ul>
+
 <h5 id="scanbotsdkxamarinios-112">ScanbotSDK.Xamarin.iOS 1.1.2</h5>
 <ul>
   <li>Upgraded the native Scanbot iOS SDK to v1.4.7</li>
