--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
     </tr>
     <tr>
       <td><img src="./assets/images/sdk_android.svg" alt="alt text" title="Android logo" /></td>
-      <td><a href="https://github.com/doo/Scanbot-SDK-Examples">Native Scanbot SDK for Android</a></td>
+      <td><a href="https://github.com/doo/Scanbot-SDK-Examples/wiki">Native Scanbot SDK for Android</a></td>
     </tr>
     <tr>
       <td><img src="./assets/images/sdk_xamarin.svg" alt="alt text" title="Xamarin logo" /></td>
-      <td><a href="https://scanbotsdk.github.io/documentation/xamarin/">Native Scanbot SDK for Xamarin (Android &amp; iOS)</a></td>
+      <td><a href="https://scanbotsdk.github.io/documentation/xamarin/">Scanbot SDK for Xamarin (Android &amp; iOS)</a></td>
     </tr>
     <tr>
       <td><img src="./assets/images/sdk_cordova.svg" alt="alt text" title="Cordova logo" /></td>
-      <td><a href="https://scanbotsdk.github.io/documentation/cordova/">Scanbot SDK as Cordova Plugin</a></td>
+      <td><a href="https://scanbotsdk.github.io/documentation/cordova/">Scanbot SDK Cordova Plugin</a></td>
     </tr>
   </tbody>
 </table>
