--- a/cordova/index.html
+++ b/cordova/index.html
@@ -946,6 +946,15 @@ Please see the description of the UI functions <a href="#module_ScanbotSdkUi.sta
 <p><a name="releaseHistory"></a></p>
 <h3 id="release-history">Release history</h3>
 
+<h5 id="141">1.4.1</h5>
+<ul>
+  <li>Android &amp; iOS:
+    <ul>
+      <li>Bugfix: Error handling in Cropping UI.</li>
+    </ul>
+  </li>
+</ul>
+
 <h5 id="140">1.4.0</h5>
 <ul>
   <li>Android:
